# semantic-evaluation-lab

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TESTING.md  basic_agent.ipynb  basic_agent.py  basic_agent_ollama.py  check_makefile.py  config.py  coverage-auto-unit.xml  coverage-functional.xml  coverage-unit.xml  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.example  logging_config.py  ollama-runner.sh  ollama_runner.md  prometheus.yml  prometheus_exporter.py  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  test_makefile  web_ui.py
.cursor/: README.md  composer.md  instructions  rules  settings.json
.github/workflows/: ci-docker.yml  ci.yml
docs/: AUTOMATION_GUIDE.md  CONVERSATION_CHAIN_TESTING.md  DOCKER_USAGE.md  DYNAMIC_CONVERSATION_TESTING.md  LOAD_TESTING_GUIDE.md  MONITORING_SETUP.md  UI_DEMO_WALKTHROUGH.md  WEB_UI_GUIDE.md
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/dashboards/definitions/: semantic-kernel-overview.json
grafana/provisioning/datasources/: prometheus.yml
tests/: __init__.py  conftest.py
tests/functional/: __init__.py  test_agents.py
tests/llm_evaluation/: __init__.py  test_agent_responses.py  test_conversation_chains.py  test_deepeval_integration.py  test_dynamic_conversation_chains.py
tests/load_testing/: __init__.py  deepeval_locust_tasks.py  locustfile.py
tests/unit/: test_config.py
